--- a/src/app/google/google.component.html
+++ b/src/app/google/google.component.html
@@ -46,14 +46,31 @@
           
                       
             <div class="form-group">
-              <label for="power">Marker Name</label>
-              <select class="form-control" id="name" required>
-                <option *ngFor="let label of ultimateArray" [value]="label">{{label.markerOptions.label}}</option>
-              </select>
-             
-              <button type="button" class="btn btn-outline-primary" (click)="BinarySearch($event)">search</button>
+              <label for="search">Marker Name</label>
+              <select class="form-control"  id="search" required [(ngModel)]="search">
+                <option *ngFor="let label of ultimateArray">{{label.markerOptions.label}}</option>
+              </select>    
+              <button type="submit" class="btn btn-outline-primary" (click)="BinarySearch()">search</button>
             </div>
 
+            <div *ngIf="showSearch">
+              <div class="card-body">
+                <h5 class="card-title">Current Temperture for {{BinarySearchLabel}}</h5>
+                <ul>
+                <li><p class="card-text">The current temp is: {{Fahrienheit | number: '1.0-0'}} degrees Fahrenheit</p></li>
+                <li><p class="card-text">With a longitude and latitude of : {{BinarySearchLatitude | number: '1.1'}} and {{BinarySearchLongitude | number: '1.1'}}</p></li>
+                <li><p class="card-text">{{currentTime}}</p></li>
+               </ul>
+              </div>
+
+
+
+
+
+            </div>
+
+
+          
         </div>
      </div>
   </ng-template>
