--- a/src/app/google/google.component.html
+++ b/src/app/google/google.component.html
@@ -26,7 +26,7 @@
    
     <div class="card" *ngIf="WeatherApi, else noPosts">
         <div class="card-body">
-        <h5 class="card-title">Current Temperture</h5>
+        <h5 class="card-title">Current Temperture for marker {{initialMarker}}</h5>
         <ul>
         <li><p class="card-text">The current temp is: {{Fahrienheit | number: '1.0-0'}} degrees Fahrenheit</p></li>
         <li><p class="card-text">With a longitude and latitude of : {{Frontendlatitude | number: '1.1'}} and {{Frontendlongitude | number: '1.1'}}</p></li>
@@ -57,7 +57,7 @@
               <div class="card-body">
                 <h5 class="card-title">Current Temperture for {{BinarySearchLabel}}</h5>
                 <ul>
-                <li><p class="card-text">The current temp is: {{Fahrienheit | number: '1.0-0'}} degrees Fahrenheit</p></li>
+                <li><p class="card-text">The current temp isadfasdfasdf: {{BinarySearchTemp | number: '1.0-0'}} degrees Fahrenheit</p></li>
                 <li><p class="card-text">With a longitude and latitude of : {{BinarySearchLatitude | number: '1.1'}} and {{BinarySearchLongitude | number: '1.1'}}</p></li>
                 <li><p class="card-text">{{currentTime}}</p></li>
                </ul>
