--- a/src/app/google/google.component.html
+++ b/src/app/google/google.component.html
@@ -26,13 +26,13 @@
    
     <div class="card" *ngIf="WeatherApi, else noPosts">
         <div class="card-body">
-        <h5 class="card-title">Current Temperture for marker {{initialMarker}}</h5>
+        <h5 class="card-title">Current Temperture for Marker {{initialMarker}}</h5>
         <ul>
         <li><p class="card-text">The current temp is: {{Fahrienheit | number: '1.0-0'}} degrees Fahrenheit</p></li>
         <li><p class="card-text">With a longitude and latitude of : {{Frontendlatitude | number: '1.1'}} and {{Frontendlongitude | number: '1.1'}}</p></li>
         <li><p class="card-text">{{currentTime}}</p></li>
-        <button type="button" class="btn btn-primary btn-sm" (click)="ClearMarkers()">Clear Markers</button>
-        <button type="button" class="btn btn-primary btn-sm"  *ngIf="Compare, else showCompare" (click)="CompareMarkers()">Compare Markers</button>
+        <button type="button" class="btn btn-primary btn-sm" [ngStyle]="{'margin': '5px'}"(click)="ClearMarkers()">Clear Markers</button>
+        <button type="button" class="btn btn-primary btn-sm"  [ngStyle]="{'margin': '5px'}"*ngIf="Compare, else showCompare" (click)="CompareMarkers()">Compare Markers</button>
         </ul>
       </div>
       
@@ -56,9 +56,9 @@
 
             <div *ngIf="showSearch">
               <div class="card-body">
-                <h5 class="card-title">Current Temperture for {{BinarySearchLabel}}</h5>
+                <h5 class="card-title">Current Temperture for Marker {{BinarySearchLabel}}</h5>
                 <ul>
-                <li><p class="card-text">The current temp isadfasdfasdf: {{BinarySearchTemp | number: '1.0-0'}} degrees Fahrenheit</p></li>
+                <li><p class="card-text">The current temp : {{BinarySearchTemp | number: '1.0-0'}} degrees Fahrenheit</p></li>
                 <li><p class="card-text">With a longitude and latitude of : {{BinarySearchLatitude | number: '1.1'}} and {{BinarySearchLongitude | number: '1.1'}}</p></li>
                 <li><p class="card-text">{{currentTime}}</p></li>
                </ul>
