--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,14 @@
 
-
   <!-- As a heading -->
-  <nav class="navbar navbar-light bg-light" [ngStyle]="{padding: '20px'}">
-    <span class="navbar-brand mb-0 h1">Temperture App</span>
+  <nav class="navbar navbar-light bg-info text-white" [ngStyle]="{padding: '20px'}">
+    <span class="navbar-brand mb-0 h1">Weather App</span>
   </nav>
 
 
 <app-google></app-google>
 
 
-
-
+  <!-- As a heading -->
+  <nav class="navbar navbar-light bg-info text-white" [ngStyle]="{padding: '20px'}">
+    <span class="navbar-brand mb-0 h1"> &#169;2023  <a href="https://www.github.com/tmen427/WeatherApp">Github</a></span>
+  </nav>
