--- a/src/app/google/google.component.html
+++ b/src/app/google/google.component.html
@@ -51,7 +51,7 @@
   
   <div class="card" [ngStyle]="{'margin': '10px'}">
     <div class="card-body">
-      <h5 class="card-title">How this site works...</h5>
+      <h5 class="card-title">How This Site Works...</h5>
       <p class="card-text">Click on any point of the map and it will reveal the temperture!</p> 
     </div>
   </div>  
@@ -59,10 +59,10 @@
   
   <div class="card"  [ngStyle]="{'margin': '10px'}" >
     <div class="card-body">
-      <h5 class="card-title">Information About this Site</h5>
+      <h5 class="card-title">Information About This Site</h5>
       <ul>
       <li><p class="card-text">For this website, I combined the Google Maps Api and OpenWeather Api in order to reveal the temperature and location when clicking on the map.</p></li>
-      <li><p class="card-text">The backend is created in c#(.NET) and the frontend is written in Angular. </p> </li>
+      <li><p class="card-text">The backend is created in C#(.NET) and the frontend is written in Angular. </p> </li>
       <li> <p class="card-text">The website is hosted on an Amazon Ec2 server with Niginx as a reverse proxy server to the Kestrel server.</p></li>
       </ul>
     </div>
