--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 
   <!-- As a heading -->
   <nav class="navbar navbar-light bg-info text-white" [ngStyle]="{padding: '20px'}">
-    <span class="navbar-brand mb-0 h1">Weather App</span>
+    <span class="navbar-brand mb-0 h1">	&#x263C; Weather App 	&#x263C;</span>
+    <div >
+   
+    </div>
   </nav>
 
 
