--- a/src/app/google/google.component.css
+++ b/src/app/google/google.component.css
@@ -1,12 +1,13 @@
 
 .parent {
-  
+   background-color: #ff8f00;
    border-radius: 15px;
-    margin: 10px; 
+    margin: 20px; 
     position: relative;
     height: 100%;
     min-width: 40%;
     height: 750px;
+    overflow: auto; 
 }
 
 .sidebar {
@@ -15,6 +16,8 @@
     padding: 15px;
     margin:"auto";
     padding:"20px";
+    position: relative;
+ 
 
 }
 
@@ -25,7 +28,7 @@
     padding: 15px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
     .parent{
       display: block;
     }  
@@ -34,5 +37,8 @@
     }
     .map {
       width: 100%;
+      background-color: #ff8f00;
+      margin-bottom: 10px;
+      border-radius: 15px;
     }
 }
