--- a/src/app/google/google.component.html
+++ b/src/app/google/google.component.html
@@ -12,7 +12,7 @@
           <li><p class="card-text">Temperture: {{Fahrienheit | number: '1.0-0'}} degrees Fahrenheit</p></li>
           <li><p class="card-text">Longitude and Latitude: {{Frontendlatitude | number: '1.1'}} and {{Frontendlongitude | number: '1.1'}}</p></li>
           <li><p class="card-text">{{currentTime}}</p></li>
-          <button type="button" class="btn btn-primary btn-sm" [ngStyle]="{'margin': '5px'}"(click)="ClearMarkers()">Clear Markers</button>
+          <button type="button" class="btn btn-primary btn-sm" [ngStyle]="{'margin': '5px'}"(click)="ClearMarkers()">Clear All Markers</button>
           <button type="button" class="btn btn-primary btn-sm"  [ngStyle]="{'margin': '5px'}"*ngIf="Compare, else showCompare" (click)="CompareMarkers()">Compare Markers</button>
           </ul>
         </div>
@@ -20,9 +20,7 @@
    <ng-template #showCompare>
         <div class="card">
             <div class="card-body">
-            <h5 class="card-title">Compare with other markers</h5>
-            <p class="card-text">Compare information with another marker here <p>
-                          
+            <h5 class="card-title">Compare with other markers</h5>                          
               <div class="form-group">
                 <label for="search">Marker Name</label>
                 <select class="form-control"  id="search" required [(ngModel)]="search">
@@ -49,17 +47,19 @@
   
    </div>
   
-  <div class="card" [ngStyle]="{'margin': '10px'}">
+  <div class="card" *ngIf="showInformation"[ngStyle]="{'margin': '10px'}">
     <div class="card-body">
-      <h5 class="card-title">How This Site Works...</h5>
-      <p class="card-text">Click on any point of the map and it will reveal the temperture!</p> 
+      <h5 class="card-title">	&#x2614; How This Site Works...</h5>
+      <ul>
+      <li><p class="card-text">Click on any point of the map and it will reveal the temperture!</p> </li>
+      </ul>
     </div>
   </div>  
 
   
-  <div class="card"  [ngStyle]="{'margin': '10px'}" >
+  <div class="card" *ngIf="showInformation" [ngStyle]="{'margin': '10px'}" >
     <div class="card-body">
-      <h5 class="card-title">Information About This Site</h5>
+      <h5 class="card-title">	&#x26C5; Information About This Site</h5>
       <ul>
       <li><p class="card-text">For this website, I combined the Google Maps Api and OpenWeather Api in order to reveal the temperature and location when clicking on the map.</p></li>
       <li><p class="card-text">The backend is created in C#(.NET) and the frontend is written in Angular. </p> </li>
