--- a/src/app/google/google.component.html
+++ b/src/app/google/google.component.html
@@ -5,44 +5,29 @@
 
   <div class="card"  [ngStyle]="{'margin': '10px'}">
     <div class="card-group">
-      <div class="card" *ngIf="WeatherApi">
+      <div class="card" *ngIf="showMarkerInformation">
           <div class="card-body">
-          <h5 class="card-title">Current Stats for Marker {{initialMarker}}</h5>
+          <h5 class="card-title">Current Values for This Marker</h5>
           <ul>
-          <li><p class="card-text">Temperture: {{Fahrienheit | number: '1.0-0'}} degrees Fahrenheit</p></li>
+   
           <li><p class="card-text">Longitude and Latitude: {{Frontendlatitude | number: '1.1'}} and {{Frontendlongitude | number: '1.1'}}</p></li>
-          <li><p class="card-text">{{currentTime}}</p></li>
-          <button type="button" class="btn btn-primary btn-sm" [ngStyle]="{'margin': '5px'}"(click)="ClearMarkers()">Clear All Markers</button>
-          <button type="button" class="btn btn-primary btn-sm"  [ngStyle]="{'margin': '5px'}"*ngIf="Compare, else showCompare" (click)="CompareMarkers()">Compare Markers</button>
+          <li><p class="card-text">Date & Time: {{today}}</p></li>
+          <li><p class="card-text">
+            <form [formGroup]="applyForm" (submit)="submitApplication()">
+              <input id="comments" type="text" formControlName="comments" placeholder="Add A Title">
+              <button type="submit" class="primary">Apply</button>
+            </form>
+
+
+
+
+          </li>
+          <button type="button" class="btn btn-primary btn-sm" [ngStyle]="{'margin': '10px'}"(click)="DeleteMarkers()">Delete This Marker</button>
+
           </ul>
         </div>
       </div>    
-   <ng-template #showCompare>
-        <div class="card">
-            <div class="card-body">
-            <h5 class="card-title">Compare with other markers</h5>                          
-              <div class="form-group">
-                <label for="search">Marker Name</label>
-                <select class="form-control"  id="search" required [(ngModel)]="search">
-                  <option *ngFor="let label of ultimateArray">{{label.markerOptions.label}}</option>
-                </select>    
-                <button type="submit" class="btn btn-outline-primary" (click)="BinarySearch()">search</button>
-              </div>
-  
-              <div *ngIf="showSearch">
-                <div class="card-body">
-                  <h5 class="card-title">Current Temperture for Marker {{BinarySearchLabel}}</h5>
-                  <ul>
-                  <li><p class="card-text">Temp: {{BinarySearchTemp | number: '1.0-0'}} degrees Fahrenheit</p></li>
-                  <li><p class="card-text">Longitude and Latitude: {{BinarySearchLatitude | number: '1.1'}} and {{BinarySearchLongitude | number: '1.1'}}</p></li>
-                  <li><p class="card-text">{{currentTime}}</p></li>
-                 </ul>
-                </div>
-  
-              </div>          
-          </div>
-       </div>
-    </ng-template>
+
     </div>
   
    </div>
@@ -51,8 +36,10 @@
     <div class="card-body">
       <h5 class="card-title">	&#x2614; How This Site Works...</h5>
       <ul>
-      <li><p class="card-text">Click on any point of the map and it will reveal the temperture!</p> </li>
-      </ul>
+      <li><p class="card-text">A crowdsourcing app that will help users find the location of Food Trucks!</p> </li>
+      <li><p class="card-text"><b>Click on the map to make a new post!</b></p> </li>
+      <li><p class="card-text">All Posts will be deleted after 24 hours. (A work in progress)</p> </li>
+    </ul>
     </div>
   </div>  
 
@@ -61,7 +48,7 @@
     <div class="card-body">
       <h5 class="card-title">	&#x26C5; Information About This Site</h5>
       <ul>
-      <li><p class="card-text">For this website, I combined the Google Maps Api and OpenWeather Api in order to reveal the temperature and location when clicking on the map.</p></li>
+      <li><p class="card-text">Google Maps Api was used to reveal longitude and latitude information on the map.</p></li>
       <li><p class="card-text">The backend is created in C#(.NET) and the frontend is written in Angular. </p> </li>
       <li> <p class="card-text">The website is hosted on an Amazon Ec2 server with Niginx as a reverse proxy server to the Kestrel server.</p></li>
       </ul>
@@ -69,15 +56,17 @@
   </div>  
 </div>
 
-<div class="map" [ngStyle]="{'borderradius': '30px'}">
+<div class="map" [ngStyle]="{'borderradius': '30px'}" >
     <google-map [center]="center" height="700px"  padding="10px" border-radius='30px'
-        width= "100%"[zoom]="zoom" (mapClick)="AddMarkers($event)">
+        width= "100%"[zoom]="zoom" (mapClick)="AddMarkers($event)" color="green" >
             <map-marker *ngFor="let markerPosition of ultimateArray"
             [position]="markerPosition.markerPositions"
             [options]="markerPosition.markerOptions"
+          
             >
+     
             </map-marker>  
-      </google-map>
+      </google-map>   
 </div> 
 
 </div>
