--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -5,8 +5,8 @@
         <th scope="col">#</th>
         <th scope="col">Longitude</th>
         <th scope="col">Latitude</th>
-        <th scope="col">Date</th>
-        <th scope="col">Comments</th>
+        <th scope="col">Date Posted</th>
+        <th scope="col">Title</th>
         <th scope="col">Delete</th>
       </tr>
     </thead>
