--- a/src/app/google/google.component.html
+++ b/src/app/google/google.component.html
@@ -19,10 +19,10 @@
             </form>
 
 
-
+ <button type="button" class="btn btn-primary btn-sm" [ngStyle]="{'margin': '5px, 5px', 'padding': '5px'}"(click)="DeleteMarkers()">Delete This Marker</button>
 
           </li>
-          <button type="button" class="btn btn-primary btn-sm" [ngStyle]="{'margin': '10px'}"(click)="DeleteMarkers()">Delete This Marker</button>
+         
 
           </ul>
         </div>
