--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,21 @@
 
-  <!-- As a heading -->
-  <!-- <nav class="navbar navbar-light bg-info text-white" [ngStyle]="{padding: '20px'}">
-    <span class="navbar-brand mb-0 h1">	&#x263C; Food Truck CrowdSourcing App	&#x263C;</span>
-    
-    <div >
-   
-    </div>
-  </nav> -->
-
   <nav class="navbar navbar-expand-lg navbar-light bg-info" >
-    <a class="navbar-brand" href="#" [ngStyle]="{padding: '20px', color: 'black'}">  <h5 class=".md-title"> &#x263C; Food Truck CrowdSourcing App &#x263C; </h5></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup" >
-      <div class="navbar-nav">
-        <a class="nav-item nav-link active " href="/"> <h5 class=".md-title"> Home </h5>  </a>
-        <a class="nav-item nav-link active" href="/table"> <h5 class=".md-title"> Table </h5>  </a>
-      
-      </div>
-    </div>
+   
+
+    <a class="navbar-brand" href="#" [ngStyle]="{padding: '10px', color: 'black'}"> &#x263C; Food Truck CrowdSourcing App &#x263C;</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">  
+            <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Home</a></li>
+
+            <li class="nav-item"><a class="nav-link active" aria-current="page"href="table">Table</a></li>
+       
+          </ul>
+  </div>
+  
   </nav>
+
+
 
 
 
@@ -29,5 +24,5 @@
 
   <!-- As a heading -->
   <nav class="navbar navbar-light bg-info text-white" [ngStyle]="{padding: '20px'}">
-    <span class="navbar-brand mb-0 h1"> &#169;2023  <a href="https://www.github.com/tmen427/WeatherApp">Github</a></span>
+    <span class="navbar-brand"> &#169;2023  <a href="https://www.github.com/tmen427/WeatherApp">Github</a></span>
   </nav>
