--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,4 +1,5 @@
-<div class="container-fluid">
+<div class="container">
+  <div class="row">
 <table class="table">
     <thead>
       <tr>
@@ -13,8 +14,8 @@
     <tbody>
       <tr  *ngFor="let x of allpionts; let i = index; ">
         <th scope="row">{{i+1}}</th>
-        <td>{{x.longitude}}</td>
-        <td>{{x.latitude}}</td>
+        <td>{{x.longitude | number : '1.2-2'}}</td>
+        <td>{{x.latitude | number: '1.2-2'}}</td>
         <td>{{x.dateTime}}</td>
         <td>{{x.comments}}</td>
         <td><button (click)="Delete(x.id)">Delete</button></td>
@@ -22,4 +23,5 @@
     
     </tbody>
   </table>
+  </div>
   </div>
